# research-workflow-desktop

./: .gitignore  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js
schemas/: analysis_spec.schema.json  prereg_spec.schema.json  qsf_survey_spec.schema.json
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: analysis.rs  assets.rs  mod.rs
src-tauri/src/llm/: commands.rs  github.rs  mod.rs  model_manager.rs  settings.rs  types.rs
src-tauri/src/prereg/: extract.rs  mod.rs  parse_docx.rs  parse_json.rs  parse_md.rs  types.rs
src-tauri/src/qsf/: mod.rs  normalize.rs  parse.rs  types.rs
src-tauri/src/render/: helpers.rs  templates.rs
src-tauri/src/spec/: builder.rs  mapping.rs  mod.rs  types.rs  validate.rs
src-tauri/src/util/: hash.rs  mod.rs  text.rs
src/components/: AnalysisCreateFromInputs.tsx  AnalysisTemplateWizard.tsx  MappingResolver.tsx  WarningsPanel.tsx
src/routes/: Analysis.tsx  Project.tsx  Study.tsx
src/state/: analysisStore.ts
src/tauri/: api.ts
src/types/: analysisTemplate.ts
src/utils/: analysisTemplate.ts
styles/apa_flextable_ggpubr/: helpers.R  plots.R  style.R  tables.R
templates/analysis/apa_v1/: 00_header.Rmd.tera  01_packages.R.tera  02_import_clean.R.tera  03_main_models.R.tera  04_robustness.R.tera  (+3 more)
tests/fixtures/: prereg_example.json  prereg_example.md  qsf_example.qsf.json
tests/rust/: test_prereg_parse_docx.rs  test_qsf_parse.rs  test_spec_builder.rs  test_template_render.rs
