[package]
name = "research-workflow"
version = "0.1.0"
description = "Local-first research workflow manager"
authors = ["you"]
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.30", features = ["bundled"] }
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
pathdiff = "0.2"
regex = "1.10"
tera = "1.20"
sha2 = "0.10"
zip = "0.6"
strsim = "0.11"

[features]
custom-protocol = ["tauri/custom-protocol"]
